--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,6 @@ h1{
 /* main panels */
 .panel-white{
     display: flex;
-    /* height: 500px; */
     justify-content: center;
     padding: 50px 0;
 }
@@ -150,7 +149,6 @@ h1{
 .panel-grey{
     display: flex;
     background-color: lightgrey;
-    /* height: 500px; */
     justify-content: center;
     padding: 50px 0;
 }
@@ -158,7 +156,6 @@ h1{
 .panel-container{
     width: 60%;
     display: flex;
-    
 }
 
 .panel-container h2{
@@ -182,7 +179,6 @@ h1{
 
 .green-square{
     width: 100%;
-    /* display: flex; */
 }
 
 .green-square {
@@ -195,43 +191,76 @@ h1{
 }
 
 /* FOOTER */
-
+/* footer top */
+/* first column */
 .footer-top{
     background-color: #23272a;
-    padding-top: 10px;
-    padding-bottom: 50px;
+    padding: 50px 0;
+    color: white;
     display: flex;
     justify-content: space-around;
-    /* debug */
-    height: 500px;
-
 }
 
-.footer-links{
+.footer-links-socials{
     width: 60%;
     display: flex;
-    border: dashed 2px;
+}
 
+.ita-logo{
+    width: 50px;
+    height: 50px;
+    margin: 10px 0;
+    padding: 10px 0;
+    display: flex;
 }
 
 .darkpink-col{
-    background-color: #f08080;
-    border: dashed 2px;
-    /* debug */
     width: 30%;
 }
 
+.darkpink-col h2{
+    color: #255ee9;
+}
+
+.socials-buttons{
+    display: flex;
+    width: 50%;
+    justify-content: flex-start;
+    justify-content: space-between;
+}
+
+.socials li{
+    list-style-type: none;
+}
+
+/* second column */
 .aqua-col{
-    background-color: #20b2aa;
-    border: dashed white 2px;
-    /* debug */
-    width: 20%;
+    width: calc(70% / 4);
+}
+
+.footer-links{
+    line-height: 40px;
+    justify-content: space-evenly;
+    
+}
+
+.footer-links li{
+    list-style-type: none;
+}
+
+.footer-links h3{
+    color: #255ee9;
+}
+
+/* footer bottom */
+hr{
+    height: 1px;
+    background-color: #255ee9;
+    border: none;
 }
 
 .footer-bottom{
     background-color: #23272a;
-    border-top: solid 2px white;
-    border-bottom: solid 2px white;
     padding-top: 50px;
     display: flex;
     justify-content: space-around;
